welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: value update is not a member of String
	if(litMessage() = "A"){
           ^BDRBuggle:6: error: value update is not a member of String
	if(litMessage() = "A"){
           ^BDRBuggle:9: error: value update is not a member of String
	if(litMessage() = "B"){
           ^BDRBuggle:13: error: value update is not a member of String
	if(litMessage() = "C"){
           ^BDRBuggle:18: error: value update is not a member of String
	if(litMessage() = "Z"){
           ^BDRBuggle:21: error: value update is not a member of String
	if(litMessage() = "Y"){
           ^BDRBuggle:25: error: value update is not a member of String
	if(litMessage() = "X"){
           ^BDRBuggle:30: error: value update is not a member of String
	if(litMessage() = "R"){
           ^BDRBuggle:34: error: value update is not a member of String
	if(litMessage() = "L"){
           ^BDRBuggle:38: error: value update is not a member of String
	if(litMessage() = "I"){
           ^